# HaskellTemplate

./: HaskellStudy.cabal  HaskellTemplate.cabal  circle.yml  hyazo.cabal  stack.yaml
src/: Main.hs  Nanashi.hs
src/Nanashi/: Action.hs  AlgebraicDataType.hs  First.hs  StateMonads.hs
src/Sugoi/: ReversePolishNotation.hs
test/: FooSpec.hs  NanashiSpec.hs
test/Nanashi/: ActionSpec.hs  AlgebraicDataTypeSpec.hs  FirstSpec.hs  StateMonadsSpec.hs
test/Sugoi/: ReversePolishNotationSpec.hs
