name:              hyazo
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.18

executable hyazo
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: base
               , array
               , directory
               , filepath
               , here
               , http-conduit
               , http-client
               , connection
               , mtl
               , network
               , process
               , random
               , text
               , time
               , transformers
               , aeson
               , http-types

  if !os(windows)
    build-depends: unix
